force-app/main/default/objects/User/fields/CWS_Approval_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Approval_Role_Name__c</fullName>
    <description>Approval Role Name used to populate approvers on the Quote.</description>
    <inlineHelpText>Approval Role Name used to identify the hierocracy of the sales rep on the Quote.</inlineHelpText>
    <label>Approval Role Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Senior Vice President</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>