force-app/main/default/objects/User/fields/CWS_Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>CWS_Calendly_Link__c</fullName>
    <inlineHelpText>This is your calendly link and can be found on your my calendly page in Calendly</inlineHelpText>
    <label>Calendly Link</label>
    <type>Url</type>
</CustomField>