force-app/main/default/objects/User/fields/CWS_Legacy_User_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Legacy_User_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>