force-app/main/default/objects/User/fields/CWS_Pipeline_Segment__c.field-meta.xml
<CustomField>
    <fullName>CWS_Pipeline_Segment__c</fullName>
    <label>Pipeline Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HVS</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>WW</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>