force-app/main/default/objects/User/fields/CWS_Region__c.field-meta.xml
<CustomField>
    <fullName>CWS_Region__c</fullName>
    <description>Region from the User Belong as it is being used for the Different Functionalities based on different flows of business.</description>
    <label>Region</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Region</valueSetName>
    </valueSet>
</CustomField>