force-app/main/default/objects/User/fields/CWS_Renewal_Batch_User__c.field-meta.xml
<CustomField>
    <fullName>CWS_Renewal_Batch_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Batch User</description>
    <inlineHelpText>Batch User</inlineHelpText>
    <label>Renewal Batch User</label>
    <type>Checkbox</type>
</CustomField>