force-app/main/default/objects/User/fields/CWS_Team__c.field-meta.xml
<CustomField>
    <fullName>CWS_Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition Sales</fullName>
            </value>
            <value>
                <fullName>Expansion Sales</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Digital Sales</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Technical Sales</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>