force-app/main/default/objects/User/fields/CWS_Team_Group__c.field-meta.xml
<CustomField>
    <fullName>CWS_Team_Group__c</fullName>
    <label>Team Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BrightGauge</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Control</fullName>
            </value>
            <value>
                <fullName>IIT</fullName>
            </value>
            <value>
                <fullName>ISAC</fullName>
            </value>
            <value>
                <fullName>ITBoost</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
                <isActive>false</isActive>
                <label>MSP</label>
            </value>
            <value>
                <fullName>MSP Core</fullName>
            </value>
            <value>
                <fullName>MSP Large</fullName>
            </value>
            <value>
                <fullName>OT</fullName>
            </value>
            <value>
                <fullName>Security Core</fullName>
            </value>
            <value>
                <fullName>Security Large</fullName>
            </value>
            <value>
                <fullName>UMM/BMS Core</fullName>
            </value>
            <value>
                <fullName>UMM/BMS Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>