force-app/main/default/objects/User/fields/CWS_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>BDR</fullName>
            </value>
            <value>
                <fullName>DAM</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Quota Carriers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>