force-app/main/default/objects/User/fields/Legacy_Community_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Community_User_Id__c</fullName>
    <description>Temporary Field created to hold the value of Community User</description>
    <label>Legacy Community User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>